--- a/views/sign_up_form.erb
+++ b/views/sign_up_form.erb
@@ -1,4 +1,4 @@
-<form action="/user/create" method = "post">
+<form action="/user" method = "post">
     <p>Sign Up</p>
     <label for="email">Enter Email Address:</label>
     <input type="text" name="email" id="email" placeholder="Email Address">
