--- a/views/log_new_entry_form.erb
+++ b/views/log_new_entry_form.erb
@@ -1,5 +1,5 @@
 <p>Entry</p>
-<form action="/diary/new" method = "post">
+<form action="/diary" method = "post">
     <label for="">Date</label>
     <input type="date" name="date" id="date" required>
 
