--- a/views/sign_up_form.erb
+++ b/views/sign_up_form.erb
@@ -8,12 +8,12 @@
 
     <p>Tell us about yourself</p>
     <label for="">Name: </label>
-    <input type="text" name="name" id="name">
+    <input type="text" name="name" id="name" placeholder="Name">
 
-    <label for="">Current Weight:</label>
-    <input type="number" name="current_weight" id="current_weight"><span> kg</span>
+    <label for="">Current Bodyweight:</label>
+    <input type="number" step="0.1" name="current_weight" id="current_weight" placeholder="Current Bodyweight"><span> kg</span>
 
-    <label for="">Goal Weight:</label>
-    <input type="number" name="goal_weight" id="goal_weight"><span> kg</span> 
+    <label for="">Goal Bodyweight:</label>
+    <input type="number" step="0.1" name="goal_weight" id="goal_weight" placeholder="Goal Bodyweight"><span> kg</span> 
     <button>Sign Up</button>
 </form>
