--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,9 +23,9 @@
   
   <nav>
     <ul>
-      <li> <a href="">Exercises</a> </li>
+      <li> <a href="/exercises">Exercises</a> </li>
       <li> <a href="/pr">My Personal Record</a> </li>
-      <li> <a href="/diary">History</a> </li>    
+      <li> <a href="/diary">Diary</a> </li>    
     </ul>
   </nav>
   <%= yield %>
