--- a/views/log_new_entry_form.erb
+++ b/views/log_new_entry_form.erb
@@ -6,11 +6,11 @@
     <label for="">Exercise</label>
     <select name="exercise" id="exercise" required>
         <option value="">Select Exercise</option>
-        <option value="bench_press">Bench Press</option>
-        <option value="squat">Squat</option>
-        <option value="deadlift">Deadlift</option>
-        <option value="rows">Rows</option>
-        <option value="bicep_curls">Bicep Curls</option>
+        <option value="Bench Press">Bench Press</option>
+        <option value="Squat">Squat</option>
+        <option value="Deadlift">Deadlift</option>
+        <option value="Rows">Rows</option>
+        <option value="Bicep Curls">Bicep Curls</option>
     </select>
 
     <label for="">Weight(kg)</label>
