--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
   <title>Plate Up</title>
   <link rel='stylesheet' href='/stylesheets/main.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
 </head>
 <body>
   <header>
@@ -23,6 +24,7 @@
   
   <nav>
     <ul>
+      <li> <a href="/">Home</a></li>
       <li> <a href="/exercises">Exercises</a> </li>
       <li> <a href="/pr">My Personal Record</a> </li>
       <li> <a href="/diary">Diary</a> </li>    
@@ -30,5 +32,8 @@
   </nav>
   <%= yield %>
 
+  <footer>
+    &copy; Plate Up by Naomi Nguyen
+  </footer>
 </body>
 </html>
