--- a/views/pr.erb
+++ b/views/pr.erb
@@ -1,8 +1,10 @@
+<section class="middle">
+    <h4>Personal Records</h4>
 <table>
     <tr>
-        <th>Date</th>
+        <th>Date Achieved</th>
         <th>Exercise</th>
-        <th>Weight</th>
+        <th>Weight(kg)</th>
         <th>Reps in one set</th>
     </tr>
 
@@ -14,7 +16,5 @@
         <td> <%= item[:reps] %> </td>
     </tr>
     <% end %>
-
-
-
 </table>
+</section>
