--- a/views/profile_edit_form.erb
+++ b/views/profile_edit_form.erb
@@ -1,20 +1,25 @@
-<h2>Edit Profile</h2>
-<form action="/profile" method = "post">
-    <input type="hidden" name="_method" value="put">
-    <label for="">Name: </label>
-    <input type="text" name="name" id="name" value="<%= current_user['name']%>">
+<section class="middle">
+    <h4>Edit Profile</h4>
+        <div class="border-form">
+        <form action="/profile" method = "post">
+            <input type="hidden" name="_method" value="put">
+            <label for="">Name: </label>
+            <input type="text" name="name" id="name" value="<%= current_user['name']%>">
 
-    <label for="">Email: </label>
-    <input type="text" name="email" id="email" value="<%= current_user['email']%>">
+            <label for="">Email: </label>
+            <input type="text" name="email" id="email" value="<%= current_user['email']%>">
 
-    <label for="">Change Password:</label>
-    <input type="password" name="password" id="password">
-    
-    <label for="">Current Bodyweight: </label>
-    <input type="number" step="0.1" name="current_weight" id="current_weight" value="<%= current_user['current_weight']%>">
+            <label for="">Change Password:</label>
+            <input type="password" name="password" id="password">
+            
+            <label for="">Current Bodyweight: </label>
+            <input type="number" step="0.1" name="current_weight" id="current_weight" value="<%= current_user['current_weight']%>">
 
-    <label for="">Goal Bodyweight: </label>
-    <input type="number" step="0.1" name="goal_weight" id="goal_weight" value="<%= current_user['goal_weight']%>">
-
-    <button>Submit</button>
-</form>
+            <label for="">Goal Bodyweight: </label>
+            <input type="number" step="0.1" name="goal_weight" id="goal_weight" value="<%= current_user['goal_weight']%>">
+        </div>
+            <div class="button-div"> 
+            <button>Submit</button>
+            </div>
+        </form>
+</section>
