--- a/views/login_form.erb
+++ b/views/login_form.erb
@@ -1,13 +1,19 @@
+<section class="middle">
+    <h4>Member Login</h4>
+        <div class="border-form">
+            <form action="/session" method="post">
+                
+                <label for="email">Email Address:</label>
+                <input type="text" name="email" id="email" placeholder="Email Address">
 
-<form action="/session" method="post">
-    <p>Member Login</p>
-    <label for="email">Email Address:</label>
-    <input type="text" name="email" id="email" placeholder="Email Address">
+                <label for="password">Password:</label>
+                <input type="password" name="password" id="password" placeholder="Password">
 
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" placeholder="Password">
+                <div class="button-div"> 
+                    <button>Log In</button>
+                </div>
+            </form>
+        </div>
 
-    <button>Log In</button>
-</form>
-
-<p>Not a member yet? <a href="/signup">Sign up now!</a></p>
+    <p>Not a member yet? <a href="/signup">Sign up now!</a></p>
+</section>
