--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,9 +7,15 @@ textarea{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header{
+header div{
     text-align: right;
+    margin: 25px 0;
+}
 
+.logo-image{
+    height: 100px;
+    float:left;
+    margin: -15px 0 0 10px;
 }
 
 nav{
